--- a/ygloria-lab3/quarterly-goals/styles.css
+++ b/ygloria-lab3/quarterly-goals/styles.css
@@ -15,17 +15,16 @@ body {
     width: 320px;
 }
 
-.goal {
-    font-size: 17px;
-    margin-bottom: 10px;
-}
-
 .tag {
-    color: gray;
+    color: gray; /* Default hashtag color */
     font-style: italic;
 }
 
 button {
     margin-top: 10px;
     padding: 5px 10px;
+}
+
+.tag.new {
+    color: #9b72ee; 
 }
